# MyDCMTK

./: .gitignore  README.md
Compress/: CMakeLists.txt  Compress.cpp
Compress/buildMinGW/: CMakeCache.txt  Makefile  cmake_install.cmake
DeCompress/: CMakeLists.txt  DeCompress.cpp  res_decompressed.dcm
Query/: CMakeLists.txt  README.md  findscu.cpp  query.dcm  storescu.cpp
checkMasks/: .gitignore  CMakeLists.txt  main.cpp
getContour/: CMakeLists.txt  RT.dcm  getContour.cpp  rt.txt  test.cpp
getContour/image/: CT.dcm  CT000.dcm  CT001.dcm
jpg2DCM/: CMakeLists.txt  jpg2dcm.cpp  newdicom.dcm
